# ReverseImageSearch-pgvector-OpenAI_Clip

./: README.md  package-lock.json  package.json
app/: page.tsx
app/api/: upload.ts
app/auth/callback/: route.ts
app/login/: page.tsx
app/protected/: page.tsx
app/search/: page.tsx
components/: AuthButton.tsx  ChooseFileButton.tsx  Header.tsx
components/ui/: input.tsx
image-search/: pyproject.toml
image-search/image_search/: main.py
supabase/: config.toml
